--- a/abstract-clustering-for-scientific-paper-insights.ipynb
+++ b/abstract-clustering-for-scientific-paper-insights.ipynb
@@ -15,8 +15,7 @@
    },
    "source": [
     "<h2><center><font color=#D40004><u> Unsupervised Clustering and Visualization of Scientific Papers Based on Abstracts </u></font></center></h2>\n",
-    "<h3><center> NECHBA Mohammed</center></h3>\n",
-    "<center> 2st year Artificial Intelligence Engineering student at ENSIAS Rabat (Morocco) </center>\n",
+    "<h3><center> Shakir Khan</center></h3>\n",
     "<br> \n"
    ]
   },
